--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
           </ul>
           <div class="media-icons">
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/MadRaigo/portfolio"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/matthieu-vergues-596033170/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
