--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Full Stack Dev</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome CDN Link -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -33,7 +30,7 @@
             </div>
           </ul>
           <div class="media-icons">
-            <a href="https://github.com/MadRaigo/portfolio"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/MadRaigo/portfolio" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/matthieu-vergues-596033170/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
@@ -66,13 +63,8 @@
             <div class="right">
               <div class="topic">Programming Is My Passion</div>
               <p>
-                Motivated to improve my skills in computer development.
-                Fascinated by programming, I am eager to explore Angular &
-                Spring and deepen my knowledge in Java. Ready to learn and
-                refine my skills in this exciting field. I really want to join
-                the training program for Application Developer Designer at AFPA
-                Brest in order to pursue a career as a Full Stack developer
-                after obtaining my diploma.
+                Motivated to improve my skills in computer development. Fascinated by programming, I am eager to explore Angular & Spring and deepen my knowledge in Java. Ready to learn and refine my skills in this exciting field. I really want to join the training program for Application Developer
+                Designer at AFPA Brest in order to pursue a career as a Full Stack developer after obtaining my diploma.
               </p>
             </div>
           </div>
@@ -175,9 +167,7 @@
           <div class="title"><span>Contact Me</span></div>
           <div class="text">
             <div class="topic">
-              <a href="https://www.linkedin.com/in/matthieu-vergues-596033170/"
-                >LinkedIn</a
-              >
+              <a href="https://www.linkedin.com/in/matthieu-vergues-596033170/">LinkedIn</a>
             </div>
           </div>
         </div>
